trilium/statefulset-family-notes.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/instance: family
    app.kubernetes.io/name: trilium-notes
  name: family-notes
spec:
  revisionHistoryLimit: 3
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: family
      app.kubernetes.io/name: trilium-notes
  serviceName: family-notes-headless
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: family
        app.kubernetes.io/name: trilium-notes
    spec:
      containers:
        - env:
            - name: TRILIUM_DATA_DIR
              value: /srv/trilium-data
            - name: TRILIUM_NETWORK_TRUSTEDREVERSEPROXY
              value: uniquelocal
          image: ghcr.io/triliumnext/trilium:v0.106.0
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /
              port: 8080
          name: trilium-notes
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: 8080
          resources: {}
          volumeMounts:
            - mountPath: /srv/trilium-data
              name: trilium-data
      securityContext:
        fsGroup: 10000
  volumeClaimTemplates:
    - apiVersion: v1
      kind: PersistentVolumeClaim
      metadata:
        name: trilium-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 2Gi
