trilium/service-family-notes-headless.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: family
    app.kubernetes.io/name: trilium-notes
  name: family-notes-headless
spec:
  clusterIP: None
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/instance: family
    app.kubernetes.io/name: trilium-notes
